# vivid-glitch

./: AGENTS.md  CMakeLists.txt  README.md  vivid-package.json
.github/workflows/: smoke.yml
graphs/: av_glitch_demo.json  breakbeat_demo.json  drum_kit_demo.json  glitch_demo.json  wavetable_acid_glitch.json  wavetable_glitch_pad.json  wavetable_stutter_lead.json
operators/audio/beat_repeat/: beat_repeat.cpp
operators/audio/freq_shift/: freq_shift.cpp
operators/audio/glitch/: glitch.cpp
operators/audio/glitch_common/: glitch_dsp.h
operators/audio/reverse/: reverse.cpp
operators/audio/scratch/: scratch.cpp
operators/audio/stretch/: stretch.cpp
operators/audio/stutter/: stutter.cpp
operators/audio/tape_stop/: tape_stop.cpp
operators/gpu/block_displacement/: block_displacement.cpp  block_displacement.wgsl
operators/gpu/channel_shift/: channel_shift.cpp  channel_shift.wgsl
operators/gpu/datamosh/: datamosh.cpp
operators/gpu/glitch_common/: glitch_gpu.h
operators/gpu/jpeg_glitch/: jpeg_glitch.cpp  jpeg_glitch.wgsl
operators/gpu/pixel_sort/: pixel_sort.cpp  pixel_sort.wgsl
operators/gpu/scan_distort/: scan_distort.cpp  scan_distort.wgsl
operators/gpu/static_glitch/: static_glitch.cpp  static_glitch.wgsl
operators/gpu/vhs/: vhs.cpp  vhs.wgsl
operators/gpu/visual_glitch/: visual_glitch.cpp
tests/cpp/: test_rate_utils.cpp
